<resources>
    <string name="app_name">豹哥健身</string>
    <string name="skip">跳过</string>
    <string name="title_activity_home_page">首页</string>
    <string name="title_home">首页</string>
    <string name="title_channel">频道</string>
    <string name="title_user_center">我的</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="loading_more_data">正在加载更多数据...</string>
    <string name="no_more_data">已经全部加载完毕</string>
    <string name="all">全部</string>
    <string name="ranking">排行榜</string>
    <string name="week_ranking">周排行</string>
    <string name="month_ranking">月排行</string>
    <string name="all_ranking">总排行</string>
    <string name="video_desc_format">%1$s次播放 | %2$s发布</string>
    <string name="play_count_format">%1$s次播放</string>
    <string name="channel">频道精选</string>
    <string name="video_count_format">%s个视频</string>
    <string name="channel_detail_info_format">%1$s 视频 | %2$s 收藏 | %3$s 分享</string>
    <string name="channel_hot">火热排序</string>
    <string name="channel_time">时间排序</string>
    <string name="search_relative">相关度</string>
    <string name="search_play_most">最热观看</string>
    <string name="search_latest_publish">最新发布</string>
    <string name="player_time_format">%1$s/%2$s</string>
    <string name="share_to_add_experience">分享+经验</string>
    <string name="cache">缓存</string>
    <string name="simple_introduce">简介</string>
    <string name="comment">评论</string>
    <string name="reply">回复</string>
    <string name="reply_format">%1$s回复%2$s:%3$s</string>
    <string name="reply_format_no_to">%1$s:%2$s</string>
    <string name="send_edit_hint">\&#064;说点什么</string>
    <string name="more_reply_format">查看全部%d条评论</string>
    <string name="zan_your_comment">赞了你的评论</string>
    <string name="xx_response_you_in">在%s中回复了你</string>
    <string name="comment_report">举报</string>
    <string name="report_type_adv">广告</string>
    <string name="report_type_harass">骚扰</string>
    <string name="report_type_violence">暴力言论</string>
    <string name="report_type_no_relation">不相关评论</string>
    <string name="report_upload">完成</string>
    <string name="comment_detail">评论详情</string>
    <string name="no_comment_right">您暂时没有评论权限</string>
    <string name="no_zan_right">您暂时没有点赞权限</string>
    <string name="no_cache_right">您暂时没有缓存视频的权限</string>
    <string name="replay_count">全部%d条评论</string>
    <string name="mine">我的</string>
    <string name="height">身高</string>
    <string name="height_format">%d</string>
    <string name="body_weight">体重</string>
    <string name="body_weight_format">%d</string>
    <string name="body_fat">体脂</string>
    <string name="body_fat_format">%d</string>
    <string name="upgrade_desc_format">还差%1$s经验值达到%2$s(%3$s)</string>
    <string name="search">搜索</string>
    <string name="search_cancel">取消</string>
    <string name="search_interesting_video">搜索感兴趣的视频</string>
    <string name="all_is_searching">大家都在搜</string>
    <string name="search_history">搜索历史</string>
    <string name="user_info">个人资料</string>
    <string name="user_grade_desc">用户等级说明</string>
    <string name="user_grade_test_desc">毫无训练痕迹的路人</string>
    <string name="user_cache">我的缓存</string>
    <string name="user_collect">我的收藏</string>
    <string name="user_response">回复我的</string>
    <string name="user_thumb_up">收到的赞</string>
    <string name="user_play_history">观看历史</string>
    <string name="system_notify">系统通知</string>
    <string name="setting">设置</string>
    <string name="member_detail">会员详情</string>
    <string name="user_detail">用户详情</string>
    <string name="my_grade">我的等级</string>
    <string name="mobile_net_tip">正在使用移动流量，确定继续播放？</string>
    <string name="mobile_net_cache_tip">正在使用移动流量，确定继续下载？</string>
    <string name="setting_4g_2g">缓存允许使用2G/3G/4G网络</string>
    <string name="clear_cache">清空缓存</string>
    <string name="thumb_up_push">推送赞的通知</string>
    <string name="comment_push">推送评论的通知</string>
    <string name="give_score">给我们评分</string>
    <string name="advice">意见反馈</string>
    <string name="advice_bug">功能bug</string>
    <string name="advice_type">问题类型</string>
    <string name="advice_desc">问题描述</string>
    <string name="please_input_advice_desc">请输入您的建议和意见</string>
    <string name="upload_advice">提交</string>
    <string name="current_version">当前版本</string>
    <string name="video_introduce">视频功能声明</string>
    <string name="user_license">用户协议</string>
    <string name="version_right">版权声明</string>
    <string name="login_out">退出当前账号</string>
    <string name="lazy_man">这个人很懒，什么都没有留下</string>
    <string name="normal_user">正式会员</string>
    <string name="user_icon">头像</string>
    <string name="user_grade">用户等级</string>
    <string name="grade">等级</string>
    <string name="LOGO">LOGO</string>
    <string name="xun_zhang">头衔</string>
    <string name="experience">所需经验</string>
    <string name="nick_name">昵称</string>
    <string name="user_sex">性别</string>
    <string name="secret">保密</string>
    <string name="sex_men">男</string>
    <string name="sex_women">女</string>
    <string name="user_birthday">出生年月</string>
    <string name="user_body_info">身体数据</string>
    <string name="user_signature">个性签名</string>
    <string name="camera">拍照</string>
    <string name="choose_from_album">从相册选择</string>
    <string name="name_and_intro">昵称和自我介绍</string>
    <string name="less_than_ten_num">10个汉字以内</string>
    <string name="user_intro_hint">20个汉字以内的一句话简介</string>
    <string name="exceed_length">超过长度限制</string>
    <string name="save_modify">保存</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="new_user_register">新用户注册</string>
    <string name="login_wechat">微信登录</string>
    <string name="no_mobile_num">暂未绑定手机</string>
    <string name="change_mobile_num">更换绑定手机</string>
    <string name="other_login_method">其他登录方式</string>
    <string name="mobile_num_null">手机号不能为空</string>
    <string name="mobile_num_invalid">手机号不合法</string>
    <string name="verify_code_error">验证码错误</string>
    <string name="verify_code_get_failed">验证码获取失败</string>
    <string name="nick_name_null">昵称不能为空</string>
    <string name="intro_null">简介不能为空</string>
    <string name="is_login_ing">登录中，请稍后</string>
    <string name="mobile_num">手机号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="fetch_verify_code">获取验证码</string>
    <string name="fetch_verify_code_count">%ds后重新获取</string>
    <string name="verify_code">验证码</string>
    <string name="area_choose">地区选择</string>
    <string name="mobile_change_success">更换手机号成功</string>
    <string name="less_than_ten_words">10个字以内</string>
    <string name="more_than_six_num_and_char">6位以上的字母和数字</string>
    <string name="password_invalid">密码只能包含字母和数字</string>
    <string name="password_too_short">密码过短</string>
    <string name="password_not_same">两次输入密码不一致</string>
    <string name="next_step">下一步</string>
    <string name="complete">完成</string>
    <string name="delete">删除</string>
    <string name="all_delete">全部删除</string>
    <string name="tag_read">标记已读</string>
    <string name="all_tag_read">全部标记已读</string>
    <string name="confirm_delete_all">确定全部删除？</string>
    <string name="download_size_format">%1$s/%2$s</string>
    <string name="downloading">缓存中</string>
    <string name="downloaded">缓存完成</string>
    <string name="download_waiting">等待</string>
    <string name="pause_download">暂停</string>
    <string name="start_download">开始</string>
    <string name="download_error">失败</string>
    <string name="special_grade_desc">
        "特殊用户说明：知名健身运动员、健康行业从业者可以将资料（APP用户名和个人成就资料发送至邮箱）"
    "8538690@qq.com申请验证，获得很骚的红名认证。"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_channel_detail">ChannelDetailActivity</string>
</resources>