<?xml version="1.0" encoding="utf-8"?>
<com.chalilayang.scaleview.ScaleLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.chalilayang.scaleview.ScaleTextView
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/size_36"
        android:textColor="@color/white"/>
    <com.chalilayang.scaleview.ScaleRelativeLayout
        android:id="@+id/input_edit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_36">
        <com.chalilayang.scaleview.ScaleEditText
            android:id="@+id/input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/please_input_password"
            android:textColorHint="@color/white_40_percent"
            android:textSize="@dimen/size_30"
            android:textColor="@color/white"
            android:cursorVisible="true"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:background="@color/transparent"
            android:layout_centerVertical="true"/>
        <com.chalilayang.scaleview.ScaleTextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="@dimen/size_28"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </com.chalilayang.scaleview.ScaleRelativeLayout>
    <View
        android:id="@+id/base_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1"
        android:layout_marginTop="@dimen/size_10"
        android:background="@color/white"/>

</com.chalilayang.scaleview.ScaleLinearLayout>